# GEMINI-I-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  command.cpp  command.h  defs.h  flash.h  main.cpp  sensor.cpp  sensor.h  sensor_defs.cpp  sensor_defs.h  uart.cpp  uart.h  util.cpp  util.h
utils/cdc-msc-hid/: CMakeLists.txt
utils/cdc_msc_hid/: CMakeLists.txt
utils/cdc_msc_hid/src/: cdc_app.c  hid_app.c  main.c  tusb_config.h
utils/pico-uart-bridge/: CMakeLists.txt  uart-bridge.c
utils/rtc-setup/: CMakeLists.txt
utils/rtc-setup/cmake/: README.md
utils/rtc-setup/lib/CEnumerateSerial/: EnumSer.htm  EnumSer.sln  EnumSer.vcxproj  enumser.cpp  main.cpp
utils/rtc-setup/src/: main.cpp
